# color-cpp.vim

./: .gitignore  LICENSE_996  README.md  install.bash
autoload/: colorcpp.vim  pysupport.vim  utils.vim
plugin/: colorcpp.vim
python/: client.py  highlight.py  vim_buffer.py  vimsupport.py
server/: .clang-format  .ycm_extra_conf.py  CMakeLists.txt  json_parser.cpp  json_parser.h  server.cpp  syntax_analyzer.cpp  syntax_analyzer.h
server/.project.settings/: project.vim  ycm_extra_conf.py
server/ClangAnalyzer/: CMakeLists.txt  ClangAnalyzer.cpp  ClangAnalyzer.h  ClangHelpers.cpp  ClangHelpers.h  ClangUtils.cpp  ClangUtils.h  Highlight.h  Location.h  Range.cpp  Range.h  TokenKindMap.h  TranslationUnit.cpp  TranslationUnit.h  TranslationUnitStore.cpp  TranslationUnitStore.h
server/log/: 20190401-155404.14619  20190401-155610.14838  20190401-160244.15386  20190401-160500.15606  20190401-182729.21992  20190401-183407.22293  20190401-183429.22355  20190401-190140.23396  20190401-190319.23519  20190401-190353.23590  20190401-190450.23660  20190401-190511.23726  20190401-190600.23790  20190401-190702.23909  20190401-190912.24012  20190401-191256.24274  20190401-191653.24457  20190401-191925.24655  20190401-191941.24737  20190402-140458.585  20190402-140615.739  20190402-141344.1197  20190402-141359.1270  20190402-150832.3683  20190402-150918.3821  20190402-151327.4149  20190402-152847.4657  20190402-153837.5135  20190402-154300.5535  20190402-154817.6161  20190402-154944.6334  20190402-155639.6725  20190402-161136.11844  20190402-161209.6046  20190402-162327.12658  20190402-162627.12860  20190402-163027.13178  20190402-163137.13364  20190402-163500.13671  20190402-163915.14226  (+37 more)
syntax/: color_cpp_highlight.vim
tools/: compile_commands.json  extract.py  gen_ycm_conf.pl  ycm_extra_conf.py
